# droplet

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  convert_map_data.py  level1.xlsx  level_template.xlsx  make.bat  make_demo.bat  notes.txt  run_tests.sh  test.c
data/maps/: droplet_level1_bg.c  droplet_level1_bg.gbm  droplet_level1_bg.h  droplet_level2_bg.c  droplet_level2_bg.gbm  droplet_level2_bg.h  droplet_level3_bg.c  droplet_level3_bg.gbm  droplet_level3_bg.h  droplet_level_menu_bg.c  droplet_level_menu_bg.gbm  droplet_level_menu_bg.h  droplet_level_menu_win.gbm  droplet_splash_bg.c  droplet_splash_bg.gbm  droplet_splash_bg.h
data/tiles/: droplet_background_tiles.c  droplet_background_tiles.gbr  droplet_background_tiles.h  droplet_level_menu_tiles.c  droplet_level_menu_tiles.gbr  droplet_level_menu_tiles.h  droplet_splash_tiles.c  droplet_splash_tiles.gbr  droplet_splash_tiles.h  droplet_sprites.c  droplet_sprites.gbr  droplet_sprites.h  droplet_sprites_backup.gbr
demos/: demo.c  demo_movement.c  make.bat.bk  make_demo.bat  test.c
docs/: gb_tech_specs.txt  notes.txt  splash.txt
levels/: level1.txt
map_data/: droplet_demo_bg.gbm  droplet_level1_bg.c  droplet_level1_bg.gbm  droplet_level1_bg.h  droplet_level1_edges.h
mock/gb/: gb.h
notes/: gbmb.md  gbtd.md  object_engine.md
src/: BackgroundMap.c  BackgroundMap.h  BackgroundTileIndex.h  Debug.c  Debug.h  Droplet.c  Droplet.h  DropletMap.c  DropletMap.h  Gate.c  Gate.h  Hitbox.c  Hitbox.h  Level.c  Level.h  Level1.c  Level1.h  Level2.c  LevelMenu.c  LevelMenu.h  LevelSelector.c  LevelSelector.h  Levels.c  Levels.h  Position.c  Position.h  Splash.c  Splash.h  SpriteCounter.c  SpriteCounter.h  SpriteIndex.h  SpriteManager.c  SpriteManager.h  SpriteSquare16.c  SpriteSquare16.h  SpriteTileIndex.h  Sprites.c  Sprites.h  Switch.c  Switch.h  (+5 more)
src/demos/: demo.c  demo_movement.c  make_demo.sh  test.c
src/engine/: Object.c
src/levels/: Level1.c  Level2.c  Level3.c  Levels.h
src/objects/: Droplet.c  Droplet.h  Gate.c  Gate.h  Spider.c  Spider.h  Switch.c  Switch.h
tests/: BackgroundMap_tests.cpp  CMakeLists.txt  DropletMap_tests.cpp  Droplet_tests.cpp  Hitbox_tests.cpp  Position_tests.cpp  Utility_tests.cpp  manual_test.c  test_utils.h
tests/mock/gb/: gb.h
tile_data/: droplet_background_tiles.c  droplet_background_tiles.gbr  droplet_sprites.c  droplet_sprites.gbr  droplet_sprites.h
tools/: objsize.py
